--- a/mail/themes/windows/mail/tabmail.css
+++ b/mail/themes/windows/mail/tabmail.css
@@ -113,15 +113,11 @@ tabpanels {
 
 .tabmail-arrowscrollbox > .scrollbutton-up,
 .tabmail-arrowscrollbox > stack > .scrollbutton-down {
-  list-style-image: url(tabs/arrow-left.svg);
+  -moz-appearance: none;
+  border-style: none;
+  padding: 0 3px;
   margin: 0;
   margin-inline-end: 1px;
-  border-radius: 0;
-}
-
-#tabs-toolbar[brighttext] .tabmail-arrowscrollbox > .scrollbutton-up,
-#tabs-toolbar[brighttext] .tabmail-arrowscrollbox > stack > .scrollbutton-down {
-  list-style-image: url(tabs/arrow-left-inverted.svg);
 }
 
 .tabmail-arrowscrollbox > .scrollbutton-up[disabled],
@@ -131,7 +127,6 @@ tabpanels {
 
 .tabmail-arrowscrollbox > .scrollbutton-up:-moz-locale-dir(rtl),
 .tabmail-arrowscrollbox > stack > .scrollbutton-down:-moz-locale-dir(ltr) {
-  transform: scaleX(-1);
   margin-inline-start: 1px;
   margin-inline-end: 0;
 }
@@ -140,25 +135,19 @@ tabpanels {
  * All Tabs Button
  */
 
-.tabs-alltabs-button,
-.tabmail-tabs toolbarbutton {
-  -moz-appearance: none;
-  border-style: none;
-  padding: 0 3px;
-}
-
-.tabs-alltabs-button:hover,
-.tabs-alltabs-button[open],
-.tabs-alltabs-button:hover:active,
 .tabmail-arrowscrollbox > .scrollbutton-up:not([disabled]):hover,
 .tabmail-arrowscrollbox > stack > .scrollbutton-down:not([disabled]):hover {
   background: var(--toolbarbutton-active-background);
 }
 
 @media (-moz-windows-glass) {
-  .tabs-alltabs-button:not(:-moz-lwtheme):hover,
-  .tabs-alltabs-button:not(:-moz-lwtheme)[open],
-  .tabs-alltabs-button:not(:-moz-lwtheme):hover:active,
+  #alltabs-button:not(:-moz-lwtheme):not([disabled]) {
+    border-color: transparent;
+    margin-top: 0;
+    margin-bottom: -1px;
+  }
+
+  #alltabs-button:not(:-moz-lwtheme):not([disabled]):hover,
   .tabmail-arrowscrollbox >
     .scrollbutton-up:not(:-moz-lwtheme):not([disabled]):hover,
   .tabmail-arrowscrollbox > stack >
@@ -172,38 +161,30 @@ tabpanels {
     background-size: calc(100% - 2px) 100%, 1px 100%, 1px 100%;
     background-repeat: no-repeat;
   }
+
+  #tabs-toolbar[brighttext] .tabmail-arrowscrollbox >
+    .scrollbutton-up:not(:-moz-lwtheme):not([disabled]):hover,
+  #tabs-toolbar[brighttext] .tabmail-arrowscrollbox > stack >
+    .scrollbutton-down:not(:-moz-lwtheme):not([disabled]):hover {
+    background-image: linear-gradient(rgba(255, 255, 255, 0),
+                      rgba(255, 255, 255, .5)),
+                      linear-gradient(transparent, rgba(255, 255, 355, .25) 30%),
+                      linear-gradient(transparent, rgba(255, 255, 255, .25) 30%);
+  }
 }
 
-.tabs-alltabs-button {
-  margin-bottom: -1px;
-  width: 18px;
-  list-style-image: url(icons/dropmarker.svg#win);
+#alltabs-button {
+  margin-bottom: 0;
+  padding-right: 3px !important;
+  padding-left: 3px !important;
 }
 
-#tabs-toolbar[brighttext] .tabs-alltabs-button {
-  list-style-image: url(icons/dropmarker.svg#win-inverted);
-}
-
-.tabs-alltabs-button > .toolbarbutton-icon {
-  width: 9px;
-  height: 7px;
-  margin: 3px 0;
-}
-
-.tabs-alltabs-button > .toolbarbutton-menu-dropmarker {
+.tabs-alltabs-button > hbox > .toolbarbutton-menu-dropmarker {
   display: none;
 }
 
 @media (-moz-os-version: windows-win8),
        (-moz-os-version: windows-win10) {
-  .tabs-alltabs-button {
-    list-style-image: url(icons/dropmarker.svg#win8);
-  }
-
-  #tabs-toolbar[brighttext] .tabs-alltabs-button {
-    list-style-image: url(icons/dropmarker.svg#win8-inverted);
-  }
-
   .tabs-closebutton > .toolbarbutton-icon,
   .tab-close-button > .toolbarbutton-icon {
     width: 20px;
@@ -225,20 +206,6 @@ tabpanels {
   .tabmail-tab:not([selected="true"]):not(:-moz-lwtheme):not(:-moz-window-inactive) {
     color: white;
   }
-
-  #messengerWindow[darkwindowframe="true"]
-  .tabs-alltabs-button:not(:-moz-lwtheme):-moz-window-inactive {
-    padding-inline-start: 5px;
-    padding-inline-end: 5px;
-  }
-
-  .tabs-alltabs-button > .toolbarbutton-icon {
-    margin: 4px 0 0;
-  }
-}
-
-.tabs-alltabs-button > .toolbarbutton-text {
-  display: none;
 }
 
 /**
