--- a/mail/themes/linux/mail/compose/messengercompose.css
+++ b/mail/themes/linux/mail/compose/messengercompose.css
@@ -779,24 +779,8 @@ toolbarbutton.formatting-button {
 }
 
 /* ::::: address book sidebar ::::: */
-.ab-closebutton {
-  list-style-image: url("chrome://messenger/skin/icons/close-button.png");
-  -moz-image-region: rect(0 16px 16px 0);
-  -moz-appearance: none;
-  border: none !important;
-  padding: 2px;
-}
-
-.ab-closebutton:hover {
-  -moz-image-region: rect(0 32px 16px 16px);
-}
-
-.ab-closebutton:hover:active {
-  -moz-image-region: rect(0 48px 16px 32px);
-}
-
 .ab-closebutton > .toolbarbutton-icon {
-  margin-inline-end: 0px; /* override toolkit's default value */
+  margin-inline-end: 0; /* override toolkit's default value */
 }
 
 #sidebar {
