--- a/calendar/base/themes/linux/calendar-unifinder.css
+++ b/calendar/base/themes/linux/calendar-unifinder.css
@@ -29,8 +29,5 @@
 }
 
 .unifinder-closebutton {
-    -moz-appearance: none;
-    border: none;
-    padding: 2px;
-    background: transparent;
+    margin-inline-end: 2px;
 }
