--- a/calendar/base/themes/windows/calendar-unifinder.css
+++ b/calendar/base/themes/windows/calendar-unifinder.css
@@ -13,10 +13,7 @@
 }
 
 .unifinder-closebutton {
-  -moz-appearance: none;
-  border: none;
-  padding: 2px;
-  background: transparent;
+  margin-inline-end: 2px;
 }
 
 @media (-moz-windows-default-theme) {
@@ -30,17 +27,5 @@
        (-moz-os-version: windows-win10) {
   #unifinder-searchBox {
     height: 35px;
-  }
-
-  .unifinder-closebutton {
-    -moz-image-region: rect(0 20px 20px 0);
-  }
-
-  .unifinder-closebutton:hover {
-    -moz-image-region: rect(0 40px 20px 20px);
-  }
-
-  .unifinder-closebutton:hover:active {
-    -moz-image-region: rect(0 60px 20px 40px);
   }
 }
