--- a/mail/themes/shared/mail/incontentprefs/aboutPreferences.css
+++ b/mail/themes/shared/mail/incontentprefs/aboutPreferences.css
@@ -299,12 +299,10 @@ tabs {
 }
 
 .close-icon {
-  background-color: transparent !important;
   border: none;
-  box-shadow: none;
-  height: 18px;
-  padding: 0;
-  min-width: 18px;
+  background: none !important;
+  min-width: 0;
+  min-height: auto;
 }
 
 .dialogBox > .groupbox-body {
