Bug 1385848 - Make the chats tab icon use the tab text color. r=jorgk

--- a/mail/components/im/themes/chat.css
+++ b/mail/components/im/themes/chat.css
@@ -643,3 +643,10 @@ toolbar[mode="text"] #statusTypeIcon > .toolbarbutton-icon {
   border-color: ThreeDShadow;
   background-color: -moz-field;
 }
+
+.tabmail-tab[type="chat"],
+.alltabs-item[type="chat"] {
+  list-style-image: url("chrome://messenger/skin/icons/chat.svg");
+  -moz-context-properties: fill;
+  fill: currentColor;
+}
