Bug 1385846 - Follow-up for chat conversation close icon after M-C changed the icon size to 20px. r=jorgk
--HG--
extra : rebase_source : 7ac7aec05b41a80aa9a68c57520b154b52c2ff12

--- a/mail/components/im/themes/chat.css
+++ b/mail/components/im/themes/chat.css
@@ -145,8 +145,13 @@ imcontact[aliasing] .contactDisplayName {
 }
 
 .closeConversationButton {
-  margin-inline-end: 0;
+  margin-inline-end: 2px;
   -moz-stack-sizing: ignore;
+}
+
+.closeConversationButton > .button-image-icon {
+  width: 16px;
+  height: 16px;
 }
 
 
