--- a/mail/themes/osx/mail/primaryToolbar.css
+++ b/mail/themes/osx/mail/primaryToolbar.css
@@ -18,36 +18,7 @@
 .mail-toolbox,
 .contentTabToolbox {
   -moz-appearance: none;
-  background: url(chrome://messenger/skin/noise.png),
-              linear-gradient(hsl(0, 0%, 93%), hsl(0, 0%, 83%));
-  background-clip: border-box;
-  background-origin: border-box !important;
-
-  /* Move the noise texture out of the top 1px strip because that overlaps
-     with the tabbar and we don't want to repaint it when animating tabs.
-     The noise image is at least 100px high, so repeating it only horizontally
-     is enough. */
-  background-repeat: repeat-x, no-repeat;
-  background-position: 0 1px, 0 0;
-  box-shadow: inset 0 1px 0 hsla(0, 0%, 100%, .4);
-}
-
-@media (min-resolution: 2dppx) {
-  .mail-toolbox,
-  .contentTabToolbox {
-    background-size: 100px 100px, auto;
-  }
-}
-
-.mail-toolbox:-moz-lwtheme,
-.contentTabToolbox:-moz-lwtheme {
-  background-color: rgba(253, 253, 253, 0.45);
-  background-image: url(chrome://messenger/skin/noise.png);
-}
-
-.mail-toolbox:not(:-moz-lwtheme):-moz-window-inactive,
-.contentTabToolbox:not(:-moz-lwtheme):-moz-window-inactive {
-  background-color: -moz-mac-chrome-inactive;
+  background: var(--toolbar-bgcolor);
 }
 
 .mail-toolbox::after,
@@ -55,23 +26,11 @@
   content: "";
   display: -moz-box;
   margin-top: -1px;
-  height: 2px;
-  background-color: hsla(0, 0%, 100%, 0.15);
+  height: 1px;
   border-bottom: 1px solid hsl(0, 0%, 60%);
 }
 
 @media (-moz-mac-yosemite-theme) {
-  .mail-toolbox,
-  .contentTabToolbox {
-    /* remove noise texture on Yosemite */
-    background: linear-gradient(hsl(0, 0%, 93%), hsl(0, 0%, 83%));
-  }
-
-  .mail-toolbox:-moz-window-inactive:not(:-moz-lwtheme),
-  .contentTabToolbox:-moz-window-inactive:not(:-moz-lwtheme) {
-    background: linear-gradient(hsl(0, 0%, 97%), hsl(0, 0%, 95%));
-  }
-
   .mail-toolbox::after,
   .contentTabToolbox::after {
     border-bottom-color: hsl(0, 0%, 68%);
