--- a/mail/themes/osx/mail/tabmail.css
+++ b/mail/themes/osx/mail/tabmail.css
@@ -8,20 +8,14 @@
  * Tabmail Tabs
  */
 
-#tabs-toolbar {
-  background-image: linear-gradient(to top, hsla(0, 0%, 0%, .3) 1px,
-                                    transparent 1px);
-}
-
 #tabs-toolbar:not(:-moz-lwtheme) {
   color: #333;
   text-shadow: 0 1px rgba(255, 255, 255, 0.4);
 }
 
-@media (-moz-mac-yosemite-theme) {
-  #tabs-toolbar {
-    margin-bottom: -1px;
-  }
+:root[tabsintitlebar][sizemode=normal] > #navigation-toolbox > #tabs-toolbar >
+  #tabbar-toolbar {
+  margin-inline-start: 40px;
 }
 
 /**
@@ -41,120 +35,6 @@
 
 .tabmail-tab[type="glodaSearch"] .tab-stack > .tab-content > .tab-icon-image {
   transform: scaleX(-1);
-}
-
-/* image preloading hack */
-.tabmail-tabs::before {
-  background-image:
-    url(tabs/selected-end.svg),
-    url(tabs/selected-start.svg),
-    url(tabs/stroke-end.png),
-    url(tabs/active-middle.png),
-    url(tabs/stroke-start.png),
-    url(tabs/background-end.png),
-    url(tabs/background-middle.png),
-    url(tabs/background-start.png);
-}
-
-@media (min-resolution: 1.1dppx) {
-  /* image preloading hack */
-  .tabmail-tabs::before {
-    background-image:
-      url(tabs/selected-end.svg),
-      url(tabs/selected-start.svg),
-      url(tabs/stroke-end@2x.png),
-      url(tabs/active-middle@2x.png),
-      url(tabs/stroke-start@2x.png),
-      url(tabs/background-end@2x.png),
-      url(tabs/background-middle@2x.png),
-      url(tabs/background-start@2x.png);
-  }
-
-  .tabmail-tab[type="glodaSearch"] {
-    list-style-image: url("chrome://messenger/skin/icons/search-tab@2x.png");
-  }
-}
-
-@media (-moz-mac-yosemite-theme) {
-  /* image preloading hack */
-  .tabmail-tabs::before {
-    background-image:
-      url(tabs/selected-end.svg),
-      url(tabs/selected-start.svg),
-      url(tabs/stroke-end.png),
-      url(tabs/active-middle.png),
-      url(tabs/stroke-start.png),
-      url(tabs/background-end.png),
-      url(tabs/background-middle.png),
-      url(tabs/background-start.png),
-      url(tabs/selected-end-yosemite-inactive.svg),
-      url(tabs/selected-start-yosemite-inactive.svg),
-      url(tabs/stroke-start-yosemite-inactive.png),
-      url(tabs/active-middle-yosemite-inactive.png),
-      url(tabs/stroke-end-yosemite-inactive.png);
-  }
-
-  .tab-background-middle[selected=true]:-moz-window-inactive {
-    background-image: url(tabs/active-middle-yosemite-inactive.png),
-                      var(--fgTabTexture),
-                      none;
-  }
-
-  .tab-background-start[selected=true]:-moz-window-inactive:-moz-locale-dir(ltr):not(:-moz-lwtheme)::before,
-  .tab-background-end[selected=true]:-moz-window-inactive:-moz-locale-dir(rtl):not(:-moz-lwtheme)::before {
-    background-image: url(tabs/selected-start-yosemite-inactive.svg);
-  }
-
-  .tab-background-end[selected=true]:-moz-window-inactive:-moz-locale-dir(ltr):not(:-moz-lwtheme)::before,
-  .tab-background-start[selected=true]:-moz-window-inactive:-moz-locale-dir(rtl):not(:-moz-lwtheme)::before {
-    background-image: url(tabs/selected-end-yosemite-inactive.svg);
-  }
-
-  .tab-background-start[selected=true]:-moz-window-inactive:-moz-locale-dir(ltr)::after,
-  .tab-background-end[selected=true]:-moz-window-inactive:-moz-locale-dir(rtl)::after {
-    background-image: url(tabs/stroke-start-yosemite-inactive.png);
-  }
-
-  .tab-background-end[selected=true]:-moz-window-inactive:-moz-locale-dir(ltr)::after,
-  .tab-background-start[selected=true]:-moz-window-inactive:-moz-locale-dir(rtl)::after {
-    background-image: url(tabs/stroke-end-yosemite-inactive.png);
-  }
-
-  @media (min-resolution: 1.1dppx) {
-    /* image preloading hack */
-    .tabmail-tabs::before {
-      background-image:
-        url(tabs/selected-end.svg),
-        url(tabs/selected-start.svg),
-        url(tabs/stroke-end@2x.png),
-        url(tabs/active-middle@2x.png),
-        url(tabs/stroke-start@2x.png),
-        url(tabs/background-end@2x.png),
-        url(tabs/background-middle@2x.png),
-        url(tabs/background-start@2x.png),
-        url(tabs/selected-end-yosemite-inactive.svg),
-        url(tabs/selected-start-yosemite-inactive.svg),
-        url(tabs/stroke-start-yosemite-inactive@2x.png),
-        url(tabs/active-middle-yosemite-inactive@2x.png),
-        url(tabs/stroke-end-yosemite-inactive@2x.png);
-    }
-
-    .tab-background-middle[selected=true]:-moz-window-inactive {
-      background-image: url(tabs/active-middle-yosemite-inactive@2x.png),
-                        var(--fgTabTexture),
-                        none;
-    }
-
-    .tab-background-start[selected=true]:-moz-window-inactive:-moz-locale-dir(ltr)::after,
-    .tab-background-end[selected=true]:-moz-window-inactive:-moz-locale-dir(rtl)::after {
-      background-image: url(tabs/stroke-start-yosemite-inactive@2x.png);
-    }
-
-    .tab-background-end[selected=true]:-moz-window-inactive:-moz-locale-dir(ltr)::after,
-    .tab-background-start[selected=true]:-moz-window-inactive:-moz-locale-dir(rtl)::after {
-      background-image: url(tabs/stroke-end-yosemite-inactive@2x.png);
-    }
-  }
 }
 
 .tabmail-tab:not(:hover) > .tab-stack > .tab-content >
@@ -194,15 +74,13 @@ tabmail > tabbox > tabpanels {
   -moz-appearance: none !important;
 }
 
-
 /**
  * Tab Drag and Drop
  */
 
 .tab-drop-indicator {
-  list-style-image: url(tabs/dragIndicator.png);
+  list-style-image: url(icons/dragIndicator.png);
   margin-bottom: -3px;
-  padding-inline-start: 26px;
 }
 
 /**
