--- a/mail/themes/shared/mail/tabmail.css
+++ b/mail/themes/shared/mail/tabmail.css
@@ -3,15 +3,6 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 #tabs-toolbar {
-  --tabHeight: 31px;
-  --tabCurveWidth: 30px;
-  --tabCurveWidthNegative: -30px;
-  --tabCurveHalfWidth: 15px;
-  --tabCurveHalfWidthNegative: -15px;
-  --tabBackgroundImage: url("chrome://messenger/skin/tabs/background-start.png"),
-                        url("chrome://messenger/skin/tabs/background-middle.png"),
-                        url("chrome://messenger/skin/tabs/background-end.png");
-  --tab-stroke-background-size: auto 100%;
   --tab-separator-opacity: 0.2;
 }
 
@@ -19,26 +10,17 @@
   --tab-separator-opacity: 0.4;
 }
 
-/* image preloading hack */
-#tabs-toolbar::before {
-  /* Because of bug 853415, we need to ordinal this to the first position: */
-  -moz-box-ordinal-group: 0;
-  content: '';
-  display: block;
-  background-image: var(--tabBackgroundImage);
+#tabs-toolbar {
+  background-image: linear-gradient(to top, var(--tabs-border) 1px,
+                    transparent 1px);
 }
 
 .tabmail-arrowscrollbox {
-  margin-bottom: -1px;
+  min-height: var(--tab-min-height);
 }
 
-.tabmail-tabs {
-  min-height: var(--tabHeight);
-}
-
-:root[tabsintitlebar][sizemode=normal] #mail-toolbar-menubar2[autohide=true] ~
-  #tabs-toolbar > #tabbar-toolbar {
-  padding-inline-start: 40px;
+.tab-stack {
+  min-height: inherit;
 }
 
 .tabmail-tab {
@@ -64,14 +46,6 @@
 
 .tabmail-tab[type="glodaSearch"] {
   list-style-image: url("chrome://messenger/skin/icons/search-glass.svg");
-}
-
-.tab-background-middle {
-  -moz-box-flex: 1;
-  background-clip: padding-box;
-  border-left: var(--tabCurveHalfWidth) solid transparent;
-  border-right: var(--tabCurveHalfWidth) solid transparent;
-  margin: 0 var(--tabCurveHalfWidthNegative);
 }
 
 .tab-content {
@@ -106,27 +80,6 @@
   -moz-image-region: auto;
 }
 
-.tab-background {
-  /* overlap the tab curves */
-  margin-inline-end: var(--tabCurveHalfWidthNegative);
-  margin-inline-start: var(--tabCurveHalfWidthNegative);
-}
-
-.tabmail-arrowscrollbox > scrollbox {
-  padding-inline-end: var(--tabCurveHalfWidth);
-  padding-inline-start: var(--tabCurveHalfWidth);
-}
-
-.tab-background-start[selected=true]::after,
-.tab-background-start[selected=true]::before,
-.tab-background-start,
-.tab-background-end,
-.tab-background-end[selected=true]::after,
-.tab-background-end[selected=true]::before {
-  min-height: var(--tabHeight);
-  width: var(--tabCurveWidth);
-}
-
 .tabmail-tab:not([selected]):not(:-moz-lwtheme) {
   color: inherit;
 }
@@ -135,87 +88,33 @@
   color: inherit;
 }
 
+.tab-line {
+  height: 2px;
+}
+
 /* Selected tab */
 
-/*
- Tab background pseudo-elements which are positioned above
- .tab-background-start/end:
-   - ::before - provides the fill of the tab curve and is clipped to the tab
-                shape. This is where pointer events go for the curve.
-   - ::after  - provides the border/stroke of the tab curve and is overlayed
-                above ::before.  Pointer events go through to ::before to get
-                the proper shape.
- */
-
-
-.tab-background-start[selected=true]::after,
-.tab-background-end[selected=true]::after {
-  /* position ::after on top of its parent */
-  margin-inline-start: var(--tabCurveWidthNegative);
-  background-size: 100% 100%;
-  content: '';
-  display: -moz-box;
-  position: relative;
+.tab-background {
+  border: 1px none transparent;
+  background-clip: padding-box;
 }
 
-.tab-background-start[selected=true]::before,
-.tab-background-end[selected=true]::before {
-  /* all ::before pseudo elements */
-  content: '';
-  display: -moz-box;
+#mail-toolbar-menubar2:not([autohide=true]) ~ #tabs-toolbar > .tabmail-tabs >
+  .tabmail-tab > .tab-stack > .tab-background {
+  border-top-style: solid;
 }
 
-.tab-background-start[selected=true]:-moz-locale-dir(ltr):not(:-moz-lwtheme)::before,
-.tab-background-end[selected=true]:-moz-locale-dir(rtl):not(:-moz-lwtheme)::before {
-  background-image: url("chrome://messenger/skin/tabs/selected-start.svg");
-  background-size: 100% 100%;
-}
-
-.tab-background-end[selected=true]:-moz-locale-dir(ltr):not(:-moz-lwtheme)::before,
-.tab-background-start[selected=true]:-moz-locale-dir(rtl):not(:-moz-lwtheme)::before {
-  background-image: url("chrome://messenger/skin/tabs/selected-end.svg");
-  background-size: 100% 100%;
-}
-
-/* For lightweight themes, clip the header image on start, middle, and end. */
-.tab-background-start[selected=true]:-moz-locale-dir(ltr):-moz-lwtheme::before,
-.tab-background-end[selected=true]:-moz-locale-dir(rtl):-moz-lwtheme::before {
-  clip-path: url(chrome://messenger/content/messenger.xul#tab-curve-clip-path-start);
-}
-
-.tab-background-end[selected=true]:-moz-locale-dir(ltr):-moz-lwtheme::before,
-.tab-background-start[selected=true]:-moz-locale-dir(rtl):-moz-lwtheme::before {
-  clip-path: url(chrome://messenger/content/messenger.xul#tab-curve-clip-path-end);
-}
-
-.tab-background-start[selected=true]:-moz-locale-dir(ltr)::after,
-.tab-background-end[selected=true]:-moz-locale-dir(rtl)::after {
-  background-image: url("chrome://messenger/skin/tabs/stroke-start.png");
-}
-
-.tab-background-end[selected=true]:-moz-locale-dir(ltr)::after,
-.tab-background-start[selected=true]:-moz-locale-dir(rtl)::after {
-  background-image: url("chrome://messenger/skin/tabs/stroke-end.png");
-}
-
-.tab-background-middle[selected=true] {
-  background-clip: padding-box, padding-box, content-box;
-  background-color: var(--fgTabBackgroundColor);
-  background-image: url("chrome://messenger/skin/tabs/active-middle.png"),
-                    var(--fgTabTexture),
-                    none;
+.tab-background[selected=true] {
+  border-left-style: solid;
+  border-right-style: solid;
+  border-color: var(--tabs-border);
+  background-color: var(--toolbar-bgcolor);
+  background-image: var(--toolbar-bgimage);
   background-repeat: repeat-x;
-  background-size: var(--tab-stroke-background-size), auto 100%;
-  /* The padding-top combined with background-clip: content-box
-     (the bottom-most) ensure the background-color doesn't extend
-     above the top border. */
-  padding-top: 2px;
 }
 
-.tab-background-start[selected=true]:-moz-lwtheme::before,
-.tab-background-end[selected=true]:-moz-lwtheme::before,
-.tab-background-middle[selected=true]:-moz-lwtheme {
-  background-color: transparent;
+.tab-line[selected=true] {
+  background-color: Highlight;
 }
 
 /*
@@ -224,27 +123,43 @@
  */
 
 /* Lightweight theme on tabs */
-.tabmail-tab > .tab-stack > .tab-background >
-  .tab-background-start[selected=true]:-moz-lwtheme::before,
-.tabmail-tab > .tab-stack > .tab-background >
-  .tab-background-end[selected=true]:-moz-lwtheme::before {
+.tabmail-tab > .tab-stack > .tab-background[selected=true]:-moz-lwtheme {
   background-attachment: scroll, fixed;
   background-color: transparent;
-  background-image: var(--fgTabTextureLWT), var(--lwt-header-image);
+  background-image: linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)),
+                    var(--lwt-header-image);
   background-position: 0 0, right top;
   background-repeat: repeat-x, no-repeat;
+  background-size: auto 100%, auto auto;
 }
 
-.tabmail-tab > .tab-stack > .tab-background >
-  .tab-background-middle[selected=true]:-moz-lwtheme {
-  background-attachment: scroll, scroll, fixed;
-  background-color: transparent;
-  background-image: url(chrome://messenger/skin/tabs/active-middle.png),
-                    var(--fgTabTextureLWT), var(--lwt-header-image);
-  background-position: 0 0, 0 0, right top;
-  background-repeat: repeat-x, repeat-x, no-repeat;
-  /* Don't stretch the LWT header images */
-  background-size: var(--tab-stroke-background-size), auto 100%, auto auto;
+/* Tab hover */
+
+.tabmail-tab:hover > .tab-stack > .tab-background:not([selected=true]) {
+  background-color: rgba(0,0,0,.1);
+}
+
+#tabs-toolbar[brighttext] > .tabmail-tabs > .tabmail-tab:hover > .tab-stack >
+  .tab-background:not([selected=true]) {
+  background-color: rgba(255,255,255,.1);
+}
+
+.tab-line:not([selected=true]) {
+  opacity: 0;
+  transform: scaleX(0);
+  transition: transform 250ms var(--animation-easing-function),
+              opacity 250ms var(--animation-easing-function);
+}
+
+.tabmail-tab:hover > .tab-stack > .tab-background > .tab-line:not([selected=true]) {
+  background-color: rgba(0,0,0,.2);
+  opacity: 1;
+  transform: none;
+}
+
+#tabs-toolbar[brighttext] > .tabmail-tabs > .tabmail-tab:hover > .tab-stack >
+  .tab-background > .tab-line:not([selected=true]) {
+  background-color: rgba(255,255,255,.2);
 }
 
 .tab-throbber {
@@ -253,59 +168,9 @@
 }
 
 @media (min-resolution: 1.1dppx) {
-  #tabs-toolbar {
-    --tabBackgroundImage: url(chrome://messenger/skin/tabs/background-start@2x.png),
-                          url(chrome://messenger/skin/tabs/background-middle@2x.png),
-                          url(chrome://messenger/skin/tabs/background-end@2x.png);
-  }
-
-  .tab-background-middle[selected=true] {
-    background-image: url(chrome://messenger/skin/tabs/active-middle@2x.png),
-                      var(--fgTabTexture),
-                      none;
-  }
-
-  .tab-background-start[selected=true]:-moz-locale-dir(ltr)::after,
-  .tab-background-end[selected=true]:-moz-locale-dir(rtl)::after {
-    background-image: url(chrome://messenger/skin/tabs/stroke-start@2x.png);
-  }
-
-  .tab-background-end[selected=true]:-moz-locale-dir(ltr)::after,
-  .tab-background-start[selected=true]:-moz-locale-dir(rtl)::after {
-    background-image: url(chrome://messenger/skin/tabs/stroke-end@2x.png);
-  }
-
-  .tabmail-tab > .tab-stack > .tab-background >
-    .tab-background-middle[selected=true]:-moz-lwtheme {
-    background-image: url(chrome://messenger/skin/tabs/active-middle@2x.png),
-                      var(--fgTabTextureLWT), var(--lwt-header-image);
-  }
-
   .tab-throbber {
     list-style-image: url("chrome://global/skin/icons/loading@2x.png");
   }
-}
-
-/* End selected tab */
-
-/* new tab button border and gradient on hover */
-.tabmail-tab:hover > .tab-stack > .tab-background:not([selected=true]) {
-  background-image: var(--tabBackgroundImage);
-  background-position: left bottom, var(--tabCurveWidth) bottom, right bottom;
-  background-repeat: no-repeat;
-  background-size: var(--tabCurveWidth) 100%,
-                   calc(100% - (2 * var(--tabCurveWidth))) 100%,
-                   var(--tabCurveWidth) 100%;
-}
-
-/* Tab pointer-events */
-.tabmail-tab {
-  pointer-events: none;
-}
-
-.tab-background-middle,
-.tab-close-button {
-  pointer-events: auto;
 }
 
 /* Tab separators */
@@ -344,7 +209,7 @@
 /* Tab Overflow */
 .tabmail-arrowscrollbox > .arrowscrollbox-overflow-start-indicator:not([collapsed]),
 .tabmail-arrowscrollbox > .arrowscrollbox-overflow-end-indicator:not([collapsed]) {
-  background-image: url("chrome://messenger/skin/tabs/overflow-indicator.png");
+  background-image: url("chrome://messenger/skin/icons/overflow-indicator.png");
   background-size: 100% 100%;
   width: 19px;
   margin-bottom: 1px;
@@ -419,7 +284,7 @@
 
 /* Content Tabs */
 .contentTabToolbox {
-  height: 0px;
+  height: 0;
 }
 
 .contentTabInstance[disablechrome] .contentTabToolbox {
@@ -427,7 +292,7 @@
 }
 
 .contentTabToolbar {
-  height: 0px;
-  min-height: 0px;
-  padding: 0px;
+  height: 0;
+  min-height: 0;
+  padding: 0;
 }
