--- a/mail/themes/linux/mail/searchBox.css
+++ b/mail/themes/linux/mail/searchBox.css
@@ -57,7 +57,7 @@ textbox:not([searchbutton]) > .textbox-input-box > .textbox-search-sign {
 #unifinder-task-edit-field  {
   -moz-appearance: none;
   background-clip: padding-box;
-  background-color: moz-field;
+  background-color: -moz-field;
   border: 1px solid ThreeDShadow;
   border-radius: var(--toolbarbutton-border-radius);
   box-shadow: 0 1px 4px rgba(0,0,0,.05);
