--- a/suite/themes/classic/mac/navigator/pageInfo.css
+++ b/suite/themes/classic/mac/navigator/pageInfo.css
@@ -11,7 +11,7 @@
 
 windowdragbox {
   min-height: 20px;
-  -moz-appearance: toolbar;
+  -moz-appearance: -moz-mac-unified-toolbar;
   -moz-box-align: center;
 }
 
